Updated Java sources for Java 11+ and Hive API compatibility
- Replaced deprecated boxed-type constructors (new Integer(), new Double(),
  new Character()) with valueOf() equivalents
- Replaced new Integer(0) wait-object pattern with new Object()
- Added @SuppressWarnings("deprecation") for retained deprecated API usage
- Removed deprecated org.apache.hadoop.hive.serde2.{Deserializer,SerDe} imports
  from HypertableStorageHandler; updated Hive storage handler API
- Updated conf/cluster.def-EXAMPLE to use apache3 Hadoop distro
- Updated conf/hypertable.cfg HdfsBroker.Hadoop.ConfDir for new Hadoop layout

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>